--- a/Server/Server/Server.vcxproj
+++ b/Server/Server/Server.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{FCB7DF69-2F77-49DC-8094-A76ECD0357BB}</ProjectGuid>
     <RootNamespace>Server</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.22000.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -148,6 +148,7 @@
   <ItemGroup>
     <ClCompile Include="casync_log.cpp" />
     <ClCompile Include="ccfg.cpp" />
+    <ClCompile Include="cclient_msg_dispatch.cpp" />
     <ClCompile Include="cconfig.cpp" />
     <ClCompile Include="ccrypto_random.cpp" />
     <ClCompile Include="cdigit2str.cpp" />
@@ -290,6 +291,7 @@
     <ClInclude Include="BweType.hpp" />
     <ClInclude Include="casync_log.h" />
     <ClInclude Include="ccfg.h" />
+    <ClInclude Include="cclient_msg_dispatch.h" />
     <ClInclude Include="cconfig.h" />
     <ClInclude Include="ccrypto_random.h" />
     <ClInclude Include="cdigit2str.h" />
