--- a/Server/Server/Server.vcxproj
+++ b/Server/Server/Server.vcxproj
@@ -172,6 +172,7 @@
     <ClCompile Include="csctp_association_mgr.cpp" />
     <ClCompile Include="ctimer.cpp" />
     <ClCompile Include="ctime_api.cpp" />
+    <ClCompile Include="cwan_handler.cpp" />
     <ClCompile Include="cwan_server.cpp" />
     <ClCompile Include="cwan_session.cpp" />
     <ClCompile Include="cwebrtc_mgr.cpp" />
@@ -306,6 +307,7 @@
     <ClInclude Include="crtc_sdp.h" />
     <ClInclude Include="crtc_sdp_define.h" />
     <ClInclude Include="crtc_sdp_util.h" />
+    <ClInclude Include="cshare_proto_error.h" />
     <ClInclude Include="csrtp_session.h" />
     <ClInclude Include="cudp_socket.h" />
     <ClInclude Include="cudp_socket_handler.h" />
