--- a/Server/Robot/Robot.vcxproj.filters
+++ b/Server/Robot/Robot.vcxproj.filters
@@ -31,6 +31,9 @@
     <Filter Include="dispatch">
       <UniqueIdentifier>{f13c04e9-56a6-489d-8a79-f92c81ed11a7}</UniqueIdentifier>
     </Filter>
+    <Filter Include="handler">
+      <UniqueIdentifier>{350f4b5f-21c6-4442-907b-ef6ae6c11f50}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cclient.h">
@@ -166,6 +169,9 @@
     </ClCompile>
     <ClCompile Include="cmsg_dispatch.cpp">
       <Filter>dispatch</Filter>
+    </ClCompile>
+    <ClCompile Include="cclient_handler.cpp">
+      <Filter>handler</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
