--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,6 @@ Server/cmake-build-debug/Server/cmake_install.cmake
 Server/cmake-build-debug/Server/Makefile
 Server/cmake-build-debug/Server/CMakeFiles/CMakeDirectoryInformation.cmake
 Server/cmake-build-debug/Server/CMakeFiles/progress.marks
+Server/www/node_modules
+Server/www/logs
+Server/chensong.log
