--- a/Server/www/package.json
+++ b/Server/www/package.json
@@ -10,12 +10,14 @@
     "express": "^4.17.3",
     "express-session": "^1.15.6",
     "helmet": "^3.21.3",
+    "log4js": "^6.6.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "sdp-transform": "^2.14.1",
+    "serve-index": "^1.9.1",
+    "socket.io": "^4.5.2",
     "ws": "^7.1.2",
     "y18n": "^5.0.5",
     "yargs": "^15.3.0"
-  } 
-   
+  }
 }
