--- a/Server/Server/Server.vcxproj.filters
+++ b/Server/Server/Server.vcxproj.filters
@@ -136,6 +136,9 @@
     <Filter Include="handler">
       <UniqueIdentifier>{7a5ee41c-66a1-4c09-9cfa-8250595cbe9d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="reply">
+      <UniqueIdentifier>{e2db577d-a684-42e1-9a5f-7dd9cf7179a3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cnet_type.cpp">
@@ -558,6 +561,12 @@
     </ClCompile>
     <ClCompile Include="cwebrtc_transprot_handler.cpp">
       <Filter>handler</Filter>
+    </ClCompile>
+    <ClCompile Include="cguard_reply.cpp">
+      <Filter>reply</Filter>
+    </ClCompile>
+    <ClCompile Include="cglobal_rtc.cpp">
+      <Filter>rtc</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1040,6 +1049,12 @@
     </ClInclude>
     <ClInclude Include="cshare_proto_error.h">
       <Filter>msg</Filter>
+    </ClInclude>
+    <ClInclude Include="cguard_reply.h">
+      <Filter>reply</Filter>
+    </ClInclude>
+    <ClInclude Include="cglobal_rtc.h">
+      <Filter>rtc</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
