--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,5 @@ Server/www/logs
 Server/www/app.log
 Server/Server/webrtc_offer_1.sdp
 Server/www/package-lock.json
+Server/Robot/cow.ive
+Server/Robot/log
