--- a/Server/Robot/CMakeLists.txt
+++ b/Server/Robot/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(Robot)
+project(cmediasoup_client)
 cmake_minimum_required(VERSION 2.8)
 MESSAGE(STATUS "#########################")
 MESSAGE(STATUS "${PROJECT_NAME}")
