--- a/Server/Robot/client.cfg
+++ b/Server/Robot/client.cfg
@@ -1,3 +1,11 @@
-# 
+﻿# 
+#mediasoup_ip=192.168.3.186
+#mediasoup_ip=192.168.1.51
+#mediasoup_http_port=8888
+#mediasoup_websocket_port=8888
+#room_name=chensong
+#client_name=chensong
+video_fps=30
+desktop_capture = 2
 
-desktop_capture = 1
+log_level = 34
