--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,5 @@ Server/Server/webrtc_offer_1.sdp
 Server/www/package-lock.json
 Server/Robot/cow.ive
 Server/Robot/log
+Server/Server/answer2.sdp
+Server/Server/answer.sdp
